--- a/CuentaCorrienteExpoGranel/App.config
+++ b/CuentaCorrienteExpoGranel/App.config
@@ -1,5 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Produccion" connectionString="Data Source=SQLTRFCA6;Initial Catalog=DbProductoTerminado;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Desarrollo" connectionString="Data Source=TFSSDFCA2;Initial Catalog=DbProductoTerminado;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
